Going for 16 parallel players. Fixing too big score problem

--- a/static/server.css
+++ b/static/server.css
@@ -74,6 +74,7 @@ body {
     border-radius: 10px;
     padding: 10px;
     font-size: 20px;
+    overflow: auto;
 
     .header {
         font-weight: bold;
